<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sensors</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="proximity_distance_cm_">Proximity Distance (cm):</string>
    <string name="geomagnetic_x_axis_ut_">"Geomagnetic X Axis (Ut) = "</string>
    <string name="geomagnetic_y_axis_ut_">"Geomagnetic Y Axis (Ut) = "</string>
    <string name="geomagnetic_z_axis_ut_">"Geomagnetic Z Axis (Ut) = "</string>
    <string name="accelerometer_x_axis_m_sec2_">"Accelerometer X Axis (m/sec2) = "</string>
    <string name="accelerometer_y_axis_m_sec2_">"Accelerometer Y Axis (m/sec2) = "</string>
    <string name="accelerometer_z_axis_m_sec2_">"Accelerometer Z Axis (m/sec2) = "</string>
    <string name="light_lx_">"Light (lx) = "</string>
    <string name="temperature_deg_c_">"Temperature (Deg C) = "</string>

</resources>