<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    
    <!-- PROX -->

    <TextView
        android:id="@+id/proxTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="38dp"
        android:text="@string/proximity_distance_cm_"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15sp" />
 
        <TextView
            android:id="@+id/Prox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/proxTitle"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:text="Medium Text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp" />
    
    <!-- GEO -->

    <TextView
        android:id="@+id/GeoXtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/proxTitle"
        android:layout_marginLeft="5dp"
        android:text="@string/geomagnetic_x_axis_ut_"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/GeoYtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/GeoXtitle"
        android:layout_marginLeft="5dp"
        android:text="@string/geomagnetic_y_axis_ut_"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15sp" />
    
    <TextView
        android:id="@+id/GeoZtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/GeoYtitle"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:text="@string/geomagnetic_z_axis_ut_"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/GeoX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/GeoXtitle"
        android:layout_marginRight="5dp"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/GeoY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/GeoYtitle"
        android:layout_marginRight="5dp"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15sp" />
    
    <!-- ACC -->

    <TextView
        android:id="@+id/AccXtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/GeoZtitle"
        android:layout_marginLeft="5dp"
        android:text="@string/accelerometer_x_axis_m_sec2_"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/AccYtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/AccXtitle"
        android:layout_marginLeft="5dp"
        android:text="@string/accelerometer_y_axis_m_sec2_"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/AccZtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/AccYtitle"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:text="@string/accelerometer_z_axis_m_sec2_"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15sp" />
    
    <TextView
        android:id="@+id/tempTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/AccZtitle"
        android:layout_marginLeft="5dp"
        android:text="@string/temperature_deg_c_"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15sp" />
    
    <TextView
        android:id="@+id/Temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tempTitle"
        android:layout_alignBottom="@+id/tempTitle"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dp"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/LightTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tempTitle"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:text="@string/light_lx_"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/AccX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/AccXtitle"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dp"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/AccY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/AccYtitle"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dp"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/AccZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/AccZtitle"
        android:layout_alignBottom="@+id/AccZtitle"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dp"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/GeoZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/GeoZtitle"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/GeoY"
        android:layout_marginRight="5dp"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/Light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/Temp"
        android:layout_marginRight="5dp"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15sp" />

</RelativeLayout>